--- a/GosuGamers/en.lproj/MainStoryboard.storyboard
+++ b/GosuGamers/en.lproj/MainStoryboard.storyboard
@@ -34,18 +34,78 @@
             </objects>
             <point key="canvasLocation" x="43" y="211"/>
         </scene>
-        <scene sceneID="nmF-qX-1Zw">
+        <scene sceneID="4BS-Mq-jyI">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="CsW-Av-uzu" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="AJC-8S-vh7" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="KCe-g0-Mh2">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hzg-OF-sp2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="lpI-Ej-7Nz" customClass="GGChannelsController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Kz1-Rd-xVq">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="zwP-ca-qIb">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ChannelCell" id="cj3-LL-Hrb" customClass="GGSwitchTableViewCell">
+                                        <rect key="frame" x="0.0" y="46" width="320" height="46"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="10" y="1" width="300" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="Y6c-72-C5o">
+                                                    <rect key="frame" x="201" y="8" width="79" height="27"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </switch>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Channel" lineBreakMode="tailTruncation" minimumFontSize="10" id="IXk-lE-FQP">
+                                                    <rect key="frame" x="13" y="11" width="64" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <connections>
+                                            <outlet property="switchView" destination="Y6c-72-C5o" id="Yqz-2w-ZNp"/>
+                                            <outlet property="titleLabel" destination="IXk-lE-FQP" id="CZe-HS-GhP"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Channels" id="r5r-6j-Aix">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="CkN-jg-YdJ">
+                            <connections>
+                                <action selector="cancel:" destination="lpI-Ej-7Nz" id="x43-Wo-KKc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="zwP-ca-qIb" id="jTx-16-URj"/>
+                        <outlet property="view" destination="Kz1-Rd-xVq" id="r1F-3U-ua7"/>
+                    </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="474" y="-357"/>
+            <point key="canvasLocation" x="465" y="-373"/>
+        </scene>
+        <scene sceneID="KH3-v2-pmQ">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HVk-ME-8BU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController definesPresentationContext="YES" id="KzH-DZ-qwy" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Cku-ri-ICe">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="lpI-Ej-7Nz" kind="relationship" relationship="rootViewController" id="KBN-xo-CgW"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="43" y="-373"/>
         </scene>
         <scene sceneID="PR8-DF-kOn">
             <objects>
@@ -54,7 +114,7 @@
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="nfB-UE-cNc">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="GameCell" textLabel="x86-TM-lfK" style="IBUITableViewCellStyleDefault" id="RRZ-Pc-ast">
                                 <rect key="frame" x="0.0" y="46" width="320" height="46"/>
@@ -89,7 +149,7 @@
                         <barButtonItem key="rightBarButtonItem" image="Feed.png" id="BcQ-5b-zoh">
                             <connections>
                                 <action selector="manageChannels:" destination="n5G-gg-GM5" id="8Rq-lg-mWv"/>
-                                <segue destination="AJC-8S-vh7" kind="modal" identifier="ManageChannels" id="9lJ-jB-jlV"/>
+                                <segue destination="KzH-DZ-qwy" kind="modal" identifier="ManageChannels" id="CV4-Ei-Su1"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -102,8 +162,30 @@
         <image name="Feed.png" width="26" height="26"/>
     </resources>
     <classes>
-        <class className="GGGameListController" superclassName="UITableViewController">
+        <class className="GGChannelsController" superclassName="GGTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GGChannelsController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancel:"/>
+            </relationships>
+        </class>
+        <class className="GGGameListController" superclassName="GGTableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/GGGameListController.h"/>
+        </class>
+        <class className="GGSwitchTableViewCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GGSwitchTableViewCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="switchView" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="GGTableViewController" superclassName="GGViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GGTableViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="GGViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GGViewController.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
