--- a/GosuGamers/SectionsStoryboard.storyboard
+++ b/GosuGamers/SectionsStoryboard.storyboard
@@ -196,21 +196,21 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Date" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" id="0ya-PE-4SP">
-                                                    <rect key="frame" x="113" y="78" width="95" height="21"/>
+                                                    <rect key="frame" x="121" y="78" width="79" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Comments" lineBreakMode="tailTruncation" minimumFontSize="10" id="bEk-D0-wAO">
-                                                    <rect key="frame" x="20" y="78" width="85" height="21"/>
+                                                    <rect key="frame" x="20" y="78" width="93" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Downloads" textAlignment="right" lineBreakMode="tailTruncation" minimumFontSize="10" id="i4c-pF-qwE">
-                                                    <rect key="frame" x="189" y="78" width="111" height="21"/>
+                                                    <rect key="frame" x="208" y="78" width="92" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -241,7 +241,7 @@
                                         <connections>
                                             <outlet property="bottomLeftDetailLabel" destination="bEk-D0-wAO" id="T6s-yV-DFo"/>
                                             <outlet property="bottomRightDetailLabel" destination="i4c-pF-qwE" id="eIW-QY-RJg"/>
-                                            <outlet property="dateLabel" destination="0ya-PE-4SP" id="1rl-Ou-ePT"/>
+                                            <outlet property="dateLabel" destination="0ya-PE-4SP" id="bbk-HL-5Fq"/>
                                             <outlet property="playerOneLabel" destination="Gpc-FO-8dH" id="Uy0-pL-ef6"/>
                                             <outlet property="playerTwoLabel" destination="Mfz-k0-ALg" id="aRg-6d-nyw"/>
                                             <outlet property="ratingView" destination="UvL-QM-d5m" id="0Wt-Ek-Nqu"/>
